--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-native-pdf": "^6.7.5",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.10.9",
-    "react-native-screens": "^3.34.0"
+    "react-native-screens": "^3.34.0",
+    "react-native-track-player": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
