--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -77,9 +77,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace "com.aurodtoriqotilfahamiyah"
+    namespace "com.aurodtoriqotilfahamiyah2024"
     defaultConfig {
-        applicationId "com.aurodtoriqotilfahamiyah"
+        applicationId "com.aurodtoriqotilfahamiyah2024"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 2
